--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,12 @@ authors = ["quininer kel <quininer@live.com>"]
 
 [dependencies]
 rand = "0.3"
+tiny-keccak = "1.1"
 
 [features]
-default = [ "i" ]
+default = [ "iv" ]
+o = []
 i = []
 ii = []
 iii = []
 iv = []
-v = []
