--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["quininer kel <quininer@live.com>"]
 [dependencies]
 rand = "0.3"
 tiny-keccak = "1.1"
+byteorder = "0.5"
 
 [features]
 default = [ "iv" ]
