--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,15 @@
 name = "blissb"
 version = "0.1.0"
 authors = ["quininer kel <quininer@live.com>"]
+description = "Post-quantum signature schemes - BLISS-B."
+repository = "https://github.com/quininer/blissb"
+license = "MIT"
 
 [dependencies]
 rand = "0.3"
 tiny-keccak = "1.1"
 byteorder = "0.5"
-bitpack = { git = "https://github.com/quininer/bitpack.git" }
+bitpack = "0.1"
 
 [features]
 default = [ "i" ]
